--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ imageproc = "0.23.0"
 uuid = {version = "1.3.0", features = ["v4"] }
 image-compare = "0.2.4"
 rgb = "0.8.34"
+toml = "0.7.1"
+serde = "1.0.152"
+serde_derive = "1.0.152"
